--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#01DFA5</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#CEF6EC</color>
 </resources>
